Remove date captured as a date created fallback, and modernize Java syntax. (#2198)